# studies

./: .editorconfig  .gitignore  LICENSE.md  README.md
modules/python-codes/modules/poetry/pre-existing-project/: pyproject.toml
modules/step-by-step-projects/projects/rag/CI-TESTING/: .pre-commit-config.yaml  Dockerfile  README-CI-Testing.md  docker-compose.yml  pyproject.toml
modules/step-by-step-projects/projects/rag/CI-TESTING/.github/workflows/: docker.yml  lint.yml  test.yml
modules/step-by-step-projects/projects/rag/CI-TESTING/tests/: test_db.py  test_health.py  test_settings.py
modules/step-by-step-projects/projects/rag/RAG - Composes/: .editorconfig  .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
modules/step-by-step-projects/projects/rag/RAG - Composes/core/: settings.py  urls.py
modules/step-by-step-projects/projects/rag/RAG - Composes/docs/: README.md  temp.md
modules/step-by-step-projects/projects/rag/RAG - Composes/documents/: forms.py  models.py  views.py
modules/step-by-step-projects/projects/rag/RAG - Composes/documents/migrations/: 0001_initial.py
modules/step-by-step-projects/projects/rag/RAG - Composes/templates/pages/: index.html
modules/step-by-step-projects/projects/rag/RAG - Composes/users/: urls.py  views.py
modules/step-by-step-projects/projects/rag/RAG - Composes/users/templates/pages/: create-account.html  home.html
modules/step-by-step-projects/projects/rag/RAG - Códigos comentados/: .editorconfig  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
modules/step-by-step-projects/projects/rag/RAG - Códigos comentados/core/: settings.py
modules/step-by-step-projects/projects/rag/RAG - Códigos comentados/templates/: base.html
modules/step-by-step-projects/projects/rag/RAG - Códigos comentados/templates/pages/: index.html
modules/step-by-step-projects/projects/rag/RAG - Códigos comentados/users/: urls.py  views.py
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/core/: settings.py  urls.py
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/docs/: README.md
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/docs/temp/: README.md  temp.html
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/templates/pages/: index.html
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/templates/socialaccount/: login.html
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/users/: adapter.py  forms.py  views.py
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/users/templates/pages/: create-account.html  home.html
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/workspace/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/workspace/migrations/: 0001_initial.py  0002_alter_file_folder.py
modules/step-by-step-projects/projects/rag/RAG - Step-by-Step/workspace/templates/pages/: workspace_home.html
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/core/: settings.py  urls.py
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/_feature/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature001/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature003/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature004/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature005/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature006/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature007/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature008/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature009/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature010/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature011/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature012/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/docs/features/feature013/: README.md
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/nginx/: nginx.conf
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/templates/: base.html
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/templates/icons/: github.svg.html  google.svg.html
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/templates/pages/: index.html
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/templates/partials/: sidebar.html
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/users/: adapter.py  forms.py  urls.py  views.py
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/workspace/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
modules/step-by-step-projects/projects/rag/ragproject-local-02-03-2026/workspace/migrations/: 0001_initial.py
(+2606 files in other folders)
