[tool.poetry]
name = "my_package"
version = "0.1.0"
description = "My first example"
authors = ["drigols <drigols.creative@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
