[project]
name = "ragproject"
version = "0.1.0"
description = ""
authors = [
    {name = "rodrigols89",email = "rodrigols89.inbox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "django-allauth (>=65.13.0,<66.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
taskipy = "^1.14.1"
pre-commit = "^4.3.0"

################### ( Ruff Settings ) ####################

[tool.ruff]
line-length = 79
exclude = [
    "core/settings.py",
    "workspace/migrations",
    "users/adapter.py",
    "workspace/urls.py"
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

################## ( Taskipy Settings ) ##################

[tool.taskipy.tasks]
# ----------------------- ( Linting ) -----------------------
pre_lint = 'ruff check --fix'
lint = 'ruff check'
# ---------------------- ( pre-commit ) ---------------------
precommit = 'pre-commit run --all-files'
# ------------------- ( Django Management ) -----------------
localserver = 'python manage.py runserver'
killserver = 'sudo kill -9 $(sudo lsof -t -i:8000)'  # Kill service/port 8000
createsuperuser = 'docker compose exec web python manage.py createsuperuser'
migrate = 'docker compose exec web python manage.py migrate'
makemigrations = 'docker compose exec web python manage.py makemigrations'
# ------------------- ( Docker Management ) -----------------
compose = 'docker compose up -d'
restartc = 'docker restart $(docker ps -q)'
rebuildc = 'docker compose up --build -d'
cleanc = """
docker stop $(docker ps -aq) 2>/dev/null || true &&
docker rm $(docker ps -aq) 2>/dev/null || true &&
docker rmi -f $(docker images -aq) 2>/dev/null || true &&
docker volume rm $(docker volume ls -q) 2>/dev/null || true &&
docker system prune -a --volumes -f
"""
# --------------------- ( Docker Exec ) ---------------------
opendb = 'docker exec -it postgresql psql -U easyrag -d easy_rag_db'
openweb = 'docker exec -it django bash'
opennginx = 'docker exec -it nginx_reverse_proxy bash'
openredis = 'docker exec -it redis_cache bash'
# --------------------- ( Poetry Export ) --------------------
exportdev = 'poetry export --without-hashes --with dev --format=requirements.txt --output=requirements-dev.txt'
exportprod = 'poetry export --without-hashes --format=requirements.txt --output=requirements.txt'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
